--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "start": "node src/index.js",
-    "test": "cross-env NODE_OPTIONS=--experimental-vm-modules npx jest --testTimeout=15000 --detectOpenHandles --watchAll --verbose"
+    "test": "cross-env NODE_OPTIONS=--experimental-vm-modules npx jest --testTimeout=15000 --detectOpenHandles --watchAll --verbose",
+    "hash": "node src/modules/hash/index.js"
   },
   "author": "",
   "license": "ISC",
